--- a/src/ProductService/ProductService.csproj
+++ b/src/ProductService/ProductService.csproj
@@ -19,6 +19,7 @@
 		<PackageReference Include="Grpc.AspNetCore" Version="2.56.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
